tooling/nargo_cli/tests/snapshots/execution_success/databus_composite_calldata/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
struct Foo {
    x: u32,
    y: [u32; 10],
}

fn main(foos: [Foo; 2], values: [[[u32; 2]; 2]; 3], zero: u32, one: u32) -> pub u32 {
    assert((foos[zero].x + 1) == foos[one].x);
    assert((foos[zero].y[3] + 2) == foos[one].y[4]);
    assert(values[zero][one][zero] == values[one][zero][one]);
    foos[zero].x + foos[one].y[0]
}
