tooling/nargo_cli/tests/snapshots/execution_success/databus_composite_calldata/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "foos",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "struct",
            "path": "Foo",
            "fields": [
              {
                "name": "x",
                "type": {
                  "kind": "integer",
                  "sign": "unsigned",
                  "width": 32
                }
              },
              {
                "name": "y",
                "type": {
                  "kind": "array",
                  "length": 10,
                  "type": {
                    "kind": "integer",
                    "sign": "unsigned",
                    "width": 32
                  }
                }
              }
            ]
          }
        },
        "visibility": "databus"
      },
      {
        "name": "values",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "array",
            "length": 2,
            "type": {
              "kind": "array",
              "length": 2,
              "type": {
                "kind": "integer",
                "sign": "unsigned",
                "width": 32
              }
            }
          }
        },
        "visibility": "databus"
      },
      {
        "name": "zero",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "one",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "unsigned",
        "width": 32
      },
      "visibility": "public"
    },
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+2d+1IcRRTGD4sEAROj8RavGwioiSbTsxd2EZHEgIoiIiISjMKGBQlRg8SImGgiD2H5BL6I/uNz5EGSA9NUZ2n2n/ma4quartqa3TO7vV+f85vTZy472yI7bevh4+/kecvDR2uy1JZvsLV4bDmPrdVje8xja/PYjnhs7R7b4x5bh8fW6bF1eWxPeGxHPbZjHtuTHttxj+0pj+1pj+2Ex/aMx/asx/acx/a8x/aCx3bSY3vRY3vJY3vZY3vFY3vVY3vNY8t7bKcSm7KkLSd7m2V3OFlG6ZrpBvS1tNPqHrlp+zb2ieuL3mTZJw0O7Esc6LbWgA4rROVisd4f103BLERxtVYpRcVSrVwxFVOqlBbjSqFQrxQr/dVatT+qmmKhbpZK1Xgp6as3fV+FpK+oL1AgG4FLq7MXF4sopM7XSXS+AWQ7pM43cTprIXWewem8GlLnWZhOU9YcqQm2LelP2VeuNGbqj7Oyt+UaxhOlazEgr+765i2cru2JxzcRo/rfj48oXTNIH4TS+DZSo0Ksj24nSLaCV7tWVQq4VuBacWuFrRW1VtBaMWuFrBWxVsBa8WqFqxWtVrBasWqFqhWpVqBacWqFqRWlVpBaMWqFqBWhVoC24jvlOM3qYAMJGqRAGs8F0LgbNKRQd6tMm+XOA3WxZrnzBBojpEbWLAJ1QiCNRkiyiOvMtFkkFmwWYYQzJtBYEBI4YyCcxQxOUyTQWBISOItAOMsZnKZMoLFfSOAsA+GsZHCaCoHGqpDAWQHCOZDBaQYINL4jJHAOAOEczOA0gwQa3xUSOAeBcA5lcJohAo3vCQmcQ0A4hzM4zTCBxgtCAucwEM6LGZzmIoHG94UEznNAOC8BdbkXxGm/eTnYKwp7AH0d9BWFI8ly1DrEOnBUwl9R2JMepN0rCkcEB+VooECir4QakTAZA5wwYkCcd8f8AXDMrOf+kT4IpfFDpEbWsgPqhEAaPxLhKDtc6tNmkTGgLtYsMkag8WPJsgjWCYE0fiIkWcR1ZtosMi7YLMII5ziBxk+FBM5xIJwTGZxmgkDjZ0IC5wQQzskMTjNJoPFzIYFzEgjnVAanmSLQ+IWQwDkFhHM6g9NME2j8UkjgnAbCOZPBaWYINH4lJHDOAOGczeA0swQaLwsJnLNAOOcyOM0cgcavhQTOOSCcVzI4zRUCjd8ICZyXgHCGOn+JHnM/cMzf4nTF7kU/2m9epGns02oH7rUboB8i0nvPLXrkpu3be6XYfLJcsA6x0CwI173n5gUH80KgQKKvFJuXMEkSrbOG01kMqfMqTmfF3qLJJiC9B5n6Qb/jTGLLOevdBtIQrCLplsOvcVHCbBvwCmIRCHAdpsuUWUt6nA/CaVwSEjjrQDiXgbpY4Vwm0PidkMC5DIRzJYPTrBBovCYkcK4A4VzN4DSrBBqvIzVqkPT+rnYHQWsGTc26BVyXvQ29M/Q9bjCxjuWIA57uDGn/teR1Llnf2EDfHyzgPXL4Nf6A1KiBahO+QEGdEEjjjwE0bjf01OY6M22WuSHYqY0RzhsEGtcEPLW1O2Aq+WsOrO3CF0SGY2I/ITWS/gb/wM6srCfLm9Yh9syKGvINAg7zb/DXBZfubwYKJLr4XcfFImI9ys9Q3P4cQON2ywUUmhbOWzBdvEf5cT4Ip/EXIYHzFhDODaAuVjg3CDT+KiRwbgDh3MzgNJsEGn8TEjg3gXDezuA0twk03kFq1CDpP7fZHQStGTQ16xZwJ7Hpezqk+dHzDuELNsMhk9+RGnNJsNkCBXVCII1/BNC43dBThuvMtFPGXcFOGYxw3iXQeE/AU0anA6aSf8+BtVP4gshwrOlPIckw7mH+tBkm1KDRB7yB/5j6yF3P0vpvC+g/9ySC9psXCcrR6UPsB1svn3bGfxj+HVlr2p4GTVane1qzdzdmx49d/nf1P2fVzl2b9fvvXzi59v8/I+66sSafqzf53LUmn9tqsu6vffq047IVg93/6HTWaxyGk9dRuhbb/rvC9B/5Tjm7E2lXwzq7rflO7LTs8zrXsGz23ka7azvqWWf7PJEsXb12HA8AdzanHESIAAA=",
  "debug_symbols": "pZbLbqNAEEX/hbUXXd1d/civjEYRtnGEhLBF7EgjK/8+VVyKZBZZDKzuMfgem36JZ3Pujo+31368XN+bl1/P5jj1w9C/vQ7XU3vvr6NcfX4eGvv4ep+6Ti413+5L69ZO3XhvXsbHMByaj3Z4zF96v7XjnPd2krvu0HTjWVKEl37olD4PX233c5VqWsrefdX5P/q09mlnP2/oe4rWp019V9d+2ff//Zbx8yFbn/3OftrS52L9vPP3t/XX9Rc2rT9f6tqnnf20r09bnj94Wz/Bxy39df0Hz/v6gXb2d47fpn5Y12/YtP5CDD/0f8un9tRP/5zYTYiy5w9NYERCZESR55Goc0SHIIRHBEREMCIhMgKWCAvDwrAwLAwLw8KwMCwMC8PCsCRYEiwJlgRLgiXBkmBJsCRYklhkmLJDiEUmPXtEQESEWFgiITKiIOocxSEI4REBERGwFFgKLAWWAkuFpcJSYamwVFgqLBWWCkuFpYpFDh5yoimatKSIyCmIikghGrBBMtBp9wrFoC5AzoAMvEEwiAZskAzMTGYmNcvgk3cGZOANgkE0YAM1R4VsoGZWqAsEZ0AGatZhCsEgGrBBMsgGxaAuoFsBoOas4A2CQTRgg2SgZp0d3RoANcvBQfP20LmYN4geYB/t1LfHoVvery6P8fTtdev+52Z37IXsNl1P3fkxdbrR53uy9f8C",
  "file_map": {
    "50": {
      "source": "struct Foo {\n    x: u32,\n    y: [u32; 10],\n}\n\nfn main(\n    foos: call_data(0) [Foo; 2],\n    values: call_data(0) [[[u32; 2]; 2]; 3],\n    zero: u32,\n    one: u32,\n) -> pub u32 {\n    assert_eq(foos[zero].x + 1, foos[one].x);\n    assert_eq(foos[zero].y[3] + 2, foos[one].y[4]);\n    assert_eq(values[zero][one][zero], values[one][zero][one]);\n    foos[zero].x + foos[one].y[0]\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient"
  ]
}
